Style text and images

--- a/index.html
+++ b/index.html
@@ -17,13 +17,16 @@
   </head>
   <body>
     <nav>
-      test
+      <img src="img/redLogo.png" alt="Suzi Rubi">
     </nav>
-    <div class="intro">
-      <p>My career began using ATEX to layout Sunsest Magazine articles in the print dark ages... </p>
-      <p>Learned brand identity from Nike masters for the next 20 years. then ventured beyond the berm to work with artisan entrepreneurs in the Pacific Northwest.</p>
-      <p>My strengths are a willingness to get my hands dirty and work hard.</p>
-      <p>My passion is working with gifted people on projects that sustain our earth.</p>
+    <div class="title bodoni">
+      <p><span class="titleCaps bodoniMedium">Designer | Junior Front End Developer</span></p>
+      <p>suzi<span class="asteric bodoniExtraBold">@</span>suzirubi.com</p>
+    </div>
+    <div class="intro bodoni bodoniLight">
+      <p>My career began using ATEX to layout <span class="bodoniMediumOblique">Sunsest</span> Magazine articles in the print dark ages... </p>
+      <p>Learned brand identity from <span class="bodoniMedium">Nike</span> masters for the next 20 years then ventured beyond the berm to work with artisan entrepreneurs in the Pacific Northwest.</p>
+      <p class="bodoniLightOblique">My strengths are a willingness to get my hands dirty and work hard. My passion is working with gifted people on projects that sustain our earth.</p>
     </div>
     <div class="gallery">
       <img src="img/chateauPOPonlyGreen.jpg" alt="Chateau St. Michelle point of purchase display">
@@ -32,7 +35,7 @@
       <img src="img/pmSeattleMetGold.jpg" alt="Portland Monthly and Seattle Metropolitan magazines">
       <img src="img/belmontDougBrownBlue.jpg" alt="Web site design for local health care providers Douglas Brown and Belmont Health Clinic">
       <img src="img/mazamaAwardBlack.jpg" alt="Mazama mountaineering club hike award certificates and collateral">
-      <img src="img/logo.jpg" alt="Logo design">
+      <img src="img/logos.jpg" alt="Logo design">
       <img src="img/communitySupportedFisheryBeige.jpg" alt="Community Supported Fishery packaging and collateral">
     </div>
   </body>
