Add recentia portfolio image to index.html

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
       <img src="img/mazamaAwardBlack.jpg" alt="Mazama mountaineering club hike award certificates and collateral">
       <img src="img/logos.jpg" alt="Logo design">
       <img src="img/communitySupportedFisheryBeige.jpg" alt="Community Supported Fishery packaging and collateral">
+      <img src="img/recentiaScutty.png" alt="Recentia Medical Charting Startup">
     </div>
   </body>
 </html>
